FEAT Project creation

--- a/index.html
+++ b/index.html
@@ -1,18 +1,17 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="description" content="" />
+    <meta name="description" content="Form Exercice for The Odin Project" />
     <meta name="theme-color" content="#242940" />
     <meta name="author" content="Sylvain Web" />
     <meta name="robots" content="noindex, nofollow" />
     <meta name="keywords" content="" />
-    <!-- ADD DESCRIPTION & KEYWORDS! -->
 
     <link rel="icon" type="image/png" sizes="32x32" href="img/favicon.png" />
-    <link rel="stylesheet" href="styles.css" />
-    <title>My Template</title>
+    <link rel="stylesheet" href="./css/styles.css" />
+    <title>Form Exercice</title>
   </head>
   <body>
     <header></header>
@@ -29,5 +28,6 @@
         >
       </p>
     </footer>
+    <script src="./js/script.js"></script>
   </body>
 </html>
