--- a/index.html
+++ b/index.html
@@ -16,53 +16,68 @@
   <body>
     <header></header>
     <main>
-      <form class="form" novalidate>
-        <label class="form__label" for="email">Email :</label>
-        <input
-          class="form__input"
-          type="email"
-          id="email"
-          name="email"
-          required
-        />
-        <label class="form__label" for="country">Country :</label>
-        <input
-          class="form__input"
-          type="text"
-          id="country"
-          name="country"
-          minlength="4"
-          required
-        />
-        <label class="form__label" for="postcode">Postal Code :</label>
-        <input
-          class="form__input"
-          type="number"
-          id="postcode"
-          name="postcode"
-          min="5"
-          required
-        />
-        <label class="form__label" for="password">Password :</label>
-        <input
-          class="form__input"
-          type="password"
-          id="password"
-          name="password"
-          required
-        />
-        <label class="form__label" for="confirm-password"
-          >Confirm Password :</label
-        >
-        <input
-          class="form__input"
-          type="password"
-          id="confirm-password"
-          name="confirm-password"
-          required
-        />
+      <form class="form" novalidate aria-label="Registration form">
+        <fieldset>
+          <legend>Personal Information</legend>
+          <label class="form__label" for="email">Email :</label>
+          <input
+            class="form__input"
+            type="email"
+            id="email"
+            name="email"
+            autocomplete="email"
+            spellcheck="false"
+            required
+          />
+          <label class="form__label" for="country">Country :</label>
+          <input
+            class="form__input"
+            type="text"
+            id="country"
+            name="country"
+            spellcheck="true"
+            minlength="4"
+            required
+          />
+          <label class="form__label" for="postcode">Postal Code :</label>
+          <input
+            class="form__input"
+            type="number"
+            id="postcode"
+            name="postcode"
+            autocomplete="postal-code"
+            minlength="5"
+            required
+          />
+          <label class="form__label" for="password">Password :</label>
+          <input
+            class="form__input"
+            type="password"
+            id="password"
+            name="password"
+            autocomplete="off"
+            required
+          />
+          <label class="form__label" for="confirm-password"
+            >Confirm Password :</label
+          >
+          <input
+            class="form__input"
+            type="password"
+            id="confirm-password"
+            name="confirm-password"
+            autocomplete="off"
+            required
+          />
 
-        <button class="submit-button" type="submit">SUBMIT</button>
+          <button
+            class="submit-button"
+            type="submit"
+            aria-label="Submit registration form"
+          >
+            <span>SUBMIT</span>
+          </button>
+        </fieldset>
       </form>
     </main>
     <footer>
