FEAT : Enhance form styles and button interactions

--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
     <header></header>
     <main>
       <form class="form" novalidate aria-label="Registration form">
-        <fieldset>
-          <legend>Personal Information</legend>
+        <fieldset class="form__fieldset">
+          <legend class="form__legend">Personal Information</legend>
           <label class="form__label" for="email">Email :</label>
           <input
             class="form__input"
