--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
           <label class="form__label" for="postcode">Postal Code :</label>
           <input
             class="form__input"
-            type="number"
+            type="text"
             id="postcode"
             name="postcode"
             autocomplete="postal-code"
