FEAT Add logic for submit button

--- a/index.html
+++ b/index.html
@@ -100,8 +100,12 @@
 
           <button
             class="submit-button"
+            id="submit-button"
             type="submit"
             aria-label="Submit registration form"
+            disabled
+            aria-disabled="true"
+            aria-live="polite"
           >
             <span>SUBMIT</span>
           </button>
